--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,15 @@
 
         </div>
 
+        <div class="chat-container">
+            <iframe
+             allow="microphone;"
+             width="350"
+             height="430"
+             src="https://console.dialogflow.com/api-client/demo/embedded/74fbe21c-148f-4cfc-8de5-c1c83fdc0181">
+            </iframe>
+        </div>
+
         <footer>
             <h3>Find me to discuss the movie</h3>
              
